Fix attribute warnings

--- a/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
+++ b/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
@@ -31,7 +31,7 @@ By the way, on the subject of Mystery Detective shows, there’s a new one airin
 
 I traveled to Gifu with the express purpose of undertaking an anime pilgrimage, Shoushimin being the anime in question. Lapin Track’s staff, and especially Mamoru Kanbe, the director, made certain creative decisions in the course of adapting the first 2 novels of the Shoushimin Series into Season 1 which rendered the City of Gifu an irreplaceable character alongside our MC, Kobato Jogoro, our Female _Character_, Osanai Yuki, and our Deuteragonist, Dojima Kengo. Every frame is treated with care, and the ED is live footage of the city with our characters inserted in it, doing a great job of immersing the viewer in the sensation of what it’s like to be in Gifu. A wonderful tourist advert, dare I say, and one that makes me wonder if they were paid off by the Gifu tourism board. Good writing makes the reader believe they’re a part of the setting, and Honobu Yonezawa, hailing from Gifu Prefecture certainly does a good job in creating an impression of his hometown Takayama (fictionalised as Kamiyama) in Hyouka and the Prefectural Capital of Gifu in Shoushimin.
 
-<iframe style={{'width': '100%', 'aspect-ratio': '16/9'}} src="https://www.youtube.com/embed/UxoqXIo82Xo" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/UxoqXIo82Xo" frameBorder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 I boarded the Shinkansen after having navigated through the chaos of Akihabara, jostling through streets filled with hundreds of anime faithfuls post the successful completion of an errand to purchase a CD (in this age? Yeah, but mostly that’s how one acquires concert tickets in Japan), for a relaxing 90 min trip to Nagoya station (Mt Fuji, sadly, was invisible behind a sombre wall of clouds). A short 30 minute transfer later and I was in Gifu station, and the first thing that hit me was the sheer desolation of the place. There was barely anyone out on the streets, which is the general experience of Japan outside of the Tokyo/Osaka megapolis people magnets, and does reinforce the claims that most JP media make about the imminent birth rate crisis. But the hotel room was cheap, had free laundry facilities, and the night ramen was epic (they did not allow me inside the on-premise onsen cos of my tattoo, but gave me a free Yakult as an apology so yay). A quick shower later, and I was ready for my walk to Chuusetsu Bridge.
 
@@ -125,7 +125,7 @@ Now, Kyoto Animation animated Hyouka, which was released before Shoushimin, and 
 
     Don’t get me wrong, I love Anime OSTs as much, if not more, than the average anime viewer. Most of the albums saved on my phone are anime OSTs, and I use them as background music to liven up a typical day. Shoushimin however, decided that Gifu was good enough. Throughout the show, there’s only one major insert song used in almost every episode (but you don’t get bored of it) and like 3 other instrumental tracks that are infrequent.
 
-    <iframe style={{'width': '100%', 'aspect-ratio': '16/9'}} src="https://www.youtube.com/embed/W-vR_Q1ZJKM" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/W-vR_Q1ZJKM" frameBorder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
     In Mamoru’s words:
     > I wanted to minimize the background music as much as possible… since it’s a dialogue-heavy work, I thought that the visuals would hold up well enough with just the dialogue alone.
