--- a/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
+++ b/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
@@ -153,9 +153,8 @@ The fact that it had a Skull Danger sign and was called Death Spicy was apparent
 
 Ten minutes after consuming the above, I was in acute pain, in the middle of nowhere, and 7 km away from my hotel room. I cursed myself for every time I was overconfident in my abilities, and reflected upon Kobato’s reasons for wanting to be an ordinary citizen. Walking for 10 min through paddy fields at 10 pm in intense pain really does humble you. Thankfully, I stumbled upon a Pharmacy store in the middle of nowhere, and thanks to the help of the cute pharmacist, scored some medication that I expected would help.
 
-<div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '20px', marginTop: '-30px', marginBottom: '-30px', alignItems: 'center' }}>
-  <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/paddy-fields.webp"/>
-  <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/stomach-medicine.webp"/>
+<div style={{marginBottom: '-10px', marginTop: '-10px'}}>
+    <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/paddy-fields-stomach-medicine.webp" />
 </div>
 
 It didn’t, at the beginning. Japanese medicine doesn’t exactly work the same way allopathic medication does, and I spent an hour cursing her and walking in abject pain, until I reached my hotel when it miraculously disappeared. Note to self: carry superior Allopathic medication.
