Change grid to individual images for some images

--- a/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
+++ b/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
@@ -139,16 +139,22 @@ Now, Kyoto Animation animated Hyouka, which was released before Shoushimin, and 
 
 After having crossed the bridge, I walked to Gifu Tanmen’s Nagara branch, a ramen restaurant chain that is featured in one of the episodes and is known for serving a spicy variety of ramen called Tantanmen. In the episode, Dojima orders extra spicy ramen for the two of them, causing Kobato to cry. As an Indian, I was confident in my ability to tolerate spice and ordered the variant ominously and prophetically titled “Death Spicy”. And yes, this led to me regretting a lot of my life choices until this point, and massively deflated my hubris.
 
-<div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '20px', marginTop: '-30px', marginBottom: '-30px', alignItems: 'center' }}>
-  <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/tanmen-restaurant-shoshimin.webp"/>
-  <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/tanmen-restaurant.webp"/>
+<div style={{marginBottom: '-10px', marginTop: '-10px'}}>
+    <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/tanmen-restaurant-shoshimin.webp" />
+</div>
+
+<div style={{marginBottom: '-10px', marginTop: '-10px'}}>
+    <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/tanmen-restaurant.webp" />
 </div>
 
 The fact that it had a Skull Danger sign and was called Death Spicy was apparently lost on my ego.
 
-<div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '20px', marginTop: '-30px', marginBottom: '-30px', alignItems: 'center' }}>
-  <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/tanmen-menu.webp"/>
-  <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/tantanmen-ramen.webp"/>
+<div style={{marginBottom: '-10px', marginTop: '-10px'}}>
+    <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/tanmen-menu.webp" />
+</div>
+
+<div style={{marginBottom: '-10px', marginTop: '-10px'}}>
+    <img src="/images/blog/me1-honobu-yonezawa-gifu-day1/tantanmen-ramen.webp" />
 </div>
 
 Ten minutes after consuming the above, I was in acute pain, in the middle of nowhere, and 7 km away from my hotel room. I cursed myself for every time I was overconfident in my abilities, and reflected upon Kobato’s reasons for wanting to be an ordinary citizen. Walking for 10 min through paddy fields at 10 pm in intense pain really does humble you. Thankfully, I stumbled upon a Pharmacy store in the middle of nowhere, and thanks to the help of the cute pharmacist, scored some medication that I expected would help.
