Add Anonymous Credits

--- a/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
+++ b/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
@@ -226,4 +226,6 @@ Thus ended Day 1 of the Gifu pilgrimage, and the first post in my series, where 
     Fin
 </center>
 
+_This article was submitted by an Anonymous BAC member._
+
 <hr className="my-0 mt-2 mb-4" />
