--- a/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
+++ b/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
@@ -123,7 +123,7 @@ Now, Kyoto Animation animated Hyouka, which was released before Shoushimin, and 
 
     Don’t get me wrong, I love Anime OSTs as much, if not more, than the average anime viewer. Most of the albums saved on my phone are anime OSTs, and I use them as background music to liven up a typical day. Shoushimin however, decided that Gifu was good enough. Throughout the show, there’s only one major insert song used in almost every episode (but you don’t get bored of it) and like 3 other instrumental tracks that are infrequent.
 
-    <iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/W-vR_Q1ZJKM" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    <iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/W-vR_Q1ZJKM" frameBorder="0" allow="fullscreen; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
     In Mamoru’s words:
     > I wanted to minimize the background music as much as possible… since it’s a dialogue-heavy work, I thought that the visuals would hold up well enough with just the dialogue alone.
@@ -226,6 +226,6 @@ Thus ended Day 1 of the Gifu pilgrimage, and the first post in my series, where 
     Fin
 </center>
 
-_This article was submitted by an Anonymous BAC member._
+_The author of this article wishes to remain anonymous._
 
 <hr className="my-0 mt-2 mb-4" />
