Updated flavour text for Ramayana

--- a/content/upcoming-events/ramayana-the-legend.mdx
+++ b/content/upcoming-events/ramayana-the-legend.mdx
@@ -6,14 +6,12 @@ tags: ["screening"]
 published: true
 ---
 
-Middle-earth is calling, and so are we! 🏰
+Join us for a great celebration of culture and storytelling! 🏹✨
 
 📅 **Date:** 26th Jan, Sunday \
 ⏰ **Time:** 1:30 PM (Arrive by 1:00 PM) \
 📍 **Location:** Garuda Mall, Magrath Road \
 🎟️ **Tickets:** TBD
-
-Join us for an epic celebration of culture and storytelling! 🏹✨
 
 Celebrate this timeless epic with us, featuring **official merch** and fun post-screening activities. Don’t miss the chance to be part of this legendary experience!
 
