Fixed announcement and added new line

--- a/content/upcoming-events/ramayana-the-legend.mdx
+++ b/content/upcoming-events/ramayana-the-legend.mdx
@@ -13,11 +13,11 @@ Join us for a great celebration of culture and storytelling! 🏹✨
 📍 **Location:** <a href="https://maps.app.goo.gl/n3woMXGT21G2MeaQ6" target="_blank" rel="noopener noreferrer">Garuda Mall, Magrath Road</a> \
 🎟️ **Tickets:** <a href="https://forms.gle/wNCU8U2cKmQsZW5AA" target="_blank" rel="noopener noreferrer">Book your tickets here!</a>
 
-✨ **Important Details:**
-✅ Seats will be assigned based on submission order (timestamp basis). We’ll call you for confirmation.
-💰 No extra charges—tickets are at standard BMS prices.
-🎁 First 100 ticket holders get a special Ramayana postcard!
-🍿🥤 Exclusive Offer: Popcorn + Cold Drink combo at ₹150 when booking through us!
+✨ **Important Details:** \
+✅ Seats will be assigned based on submission order (timestamp basis). We’ll call you for confirmation. \
+💰 No extra charges—tickets are at standard BMS prices. \
+🎁 First 100 ticket holders get a special Ramayana postcard! \
+🍿🥤 Exclusive Offer: Popcorn + Cold Drink combo at ₹150 when booking through us! \
 
 Celebrate this timeless epic with us, featuring fun post-screening activities. Don’t miss the chance to be part of this legendary experience!
 
