removed last slash

--- a/content/upcoming-events/ramayana-the-legend.mdx
+++ b/content/upcoming-events/ramayana-the-legend.mdx
@@ -17,7 +17,7 @@ Join us for a great celebration of culture and storytelling! 🏹✨
 ✅ Seats will be assigned based on submission order (timestamp basis). We’ll call you for confirmation. \
 💰 No extra charges—tickets are at standard BMS prices. \
 🎁 First 100 ticket holders get a special Ramayana postcard! \
-🍿🥤 Exclusive Offer: Popcorn + Cold Drink combo at ₹150 when booking through us! \
+🍿🥤 Exclusive Offer: Popcorn + Cold Drink combo at ₹150 when booking through us!
 
 Celebrate this timeless epic with us, featuring fun post-screening activities. Don’t miss the chance to be part of this legendary experience!
 
