--- a/content/upcoming-events/we're-so-back.mdx
+++ b/content/upcoming-events/we're-so-back.mdx
@@ -19,7 +19,7 @@ We're kicking off our first BAC meetup of 2025, and it's gonna be a fun one!
 Come hang out, talk anime, and just vibe with fellow weebs in the great outdoors! Whether you're a seasoned otaku or just getting into anime, you're super welcome. Let’s make some core memories!
 
 <div align="center">
-    ![Poster - The Colors Within (2024)](/images/events/we're-so-back-feb25.webp)
+    ![Poster](/images/events/we're-so-back-feb25.webp)
 </div>
 
 
