--- a/content/blog/anime-industry-insight-feb25.mdx
+++ b/content/blog/anime-industry-insight-feb25.mdx
@@ -1,13 +1,10 @@
 ---
-title: Anime Industry Insight
+title: Anime Industry Insight Feb'25
 description: "Information about animation producers and production lines in anime studios"
 date: 2025-02-24
-tags: ["anime", ""]
-published: false
+tags: ["anime"]
+published: true
 ---
-
-📅 &nbsp;
-**Last Updated:** 
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
     <h1>**Predict the release date of your favourite anime**</h1>
@@ -15,7 +12,7 @@ published: false
 
 How can you, yes YOU predict when an anime will release? Well to find out when an anime will release, you have to understand how anime studios work. Anime studios occupy a major space in the popular imagination of the anime fandom. However, the workings of these studios are often misunderstood. It is common sentiment to think that the entire staff of a studio works on an anime, and that multiple anime being made in the studio will lead to less quality because the staff or ‘budget’ gets divided. In reality different anime have their own production teams and separate budgets which are allocated by a Production committee (not the studio!)
  
-To find out how your favourite anime are actually made and predict when the next season of say Chainsaw Man or Jujutsu Kaisen will air, let’s look at the inner workings of Studio MAPPA.
+To find out how your favourite anime are actually made and predict when the next season of say *Chainsaw Man* or *Jujutsu Kaisen* will air, let’s look at the inner workings of Studio MAPPA.
 
 <div style={{marginBottom: '-10px', marginTop: '-10px'}}>
   <img src="/images/blog/anime-insight-feb25/anip1.webp" className="rounded-xl" />
@@ -28,17 +25,17 @@ Animators and production staff work in teams managed by an animation producer or
 - Supporting the director by hiring animators, composers, voice actors and all necessary staff to fulfill the vision of the director.
 - Managing all aspects of anime production from funding to post-processing.
 
-To put it simply, the AniP is a high level manager who is knowledgeable about the entire production pipeline and has built a network of contacts over their entire career to create anime from the ground up. The trust and reputation of the AniP is hence crucial for the success of the production. The AniP tends to remain the same across multiple seasons of the show, even if the director or other staff change. You can find out the AniP for any particular show from the show’s credits, or if you can’t read Japanese, translated staff lists are available at <a href="https://staff.keyframe.blog/">Keyframe Staff List</a>.
+To put it simply, the AniP is a high level manager who is knowledgeable about the entire production pipeline and has built a network of contacts over their entire career to create anime from the ground up. The trust and reputation of the AniP is hence crucial for the success of the production. The AniP tends to remain the same across multiple seasons of the show, even if the director or other staff change. You can find out the AniP for any particular show from the show’s credits, or if you can’t read Japanese, translated staff lists are available at <a href="https://staff.keyframe.blog/" target="_blank">Keyframe Staff List</a>.
 
-As each AniP manages distinct teams, it is unlikely that the production of Hell’s Paradise s2 will interfere with Jujutsu Kaisen s3 and vice versa. However, Chainsaw Man and Jujutsu Kaisen do share some staff as they are made under the same animation producer, Keisuke Seshimo. For example, the director of Chainsaw Man season 1, Ryuu Nakayama was offered the chance to direct Chainsaw Man while working on Jujutsu Kaisen episode 19. Other notable staff shared by both CSM and JJK include Hironori Tanaka and Tatsuya Yoshihara.
+As each AniP manages distinct teams, it is unlikely that the production of *Hell’s Paradise* season 2 will interfere with *Jujutsu Kaisen* season 3 and vice versa. However, *Chainsaw Man* and *Jujutsu Kaisen* do share some staff as they are made under the same animation producer, Keisuke Seshimo. For example, the director of *Chainsaw Man* season 1, Ryuu Nakayama was offered the chance to direct *Chainsaw Man* while working on *Jujutsu Kaisen* episode 19. Other notable staff shared by both CSM and JJK include Hironori Tanaka and Tatsuya Yoshihara.
 
 <div style={{marginBottom: '-10px', marginTop: '-10px'}}>
   <img src="/images/blog/anime-insight-feb25/anip2.webp" className="rounded-xl" />
 </div>
 
-The production of an anime can take more than a year so both Chainsaw man and Jujutsu Kaisen season were being worked on simultaneously. As Chainsaw Man and Jujutsu Kaisen have a lot of shared staff, the release of new seasons is staggered with 6 months or more between seasons, to reduce the extent of conflict between the two productions and better manage resources. However, Jujutsu Kaisen s2 famously had a troubled production with some episodes going to air unfinished. This is apparent looking at the schedule, with only 6 months between Chainsaw Man and JJK s2, which is further exacerbated by the 24 episode duration of the season and change in director from Sung Ho Park to Shouta Goshozono.
+The production of an anime can take more than a year so both Chainsaw man and Jujutsu Kaisen season were being worked on simultaneously. As *Chainsaw Man* and *Jujutsu Kaisen* have a lot of shared staff, the release of new seasons is staggered with 6 months or more between seasons, to reduce the extent of conflict between the two productions and better manage resources. However, *Jujutsu Kaisen* season 2 famously had a troubled production with some episodes going to air unfinished. This is apparent looking at the schedule, with only 6 months between *Chainsaw Man* and JJK s2, which is further exacerbated by the 24 episode duration of the season and change in director from Sung Ho Park to Shouta Goshozono.
 
-So when will Chainsaw Man’s Reze movie and the third season of Jujutsu Kaisen release? Chainsaw Man’s movie still does not have a release date announced, however it is supposed to air in 2025. Looking at the release schedule for Seshimo’s shows, you can see that the Reze movie is taking much longer to make compared to Jujutsu Kaisen 0. This can be for multiple reasons:
+So when will *Chainsaw Man*’s Reze movie and the third season of *Jujutsu Kaisen* release? *Chainsaw Man*’s movie still does not have a release date announced, however it is supposed to air in 2025. Looking at the release schedule for Seshimo’s shows, you can see that the Reze movie is taking much longer to make compared to *Jujutsu Kaisen 0*. This can be for multiple reasons:
 - The director of the Reze movie was changed from Ryuu Nakayama to Tatsuya Yoshihara, which leads to some changes in staff as the the director brings in artists they’re familiar with and character designs undergo changes leading to more pre-production.
 -	Jujutsu Kaisen 0 was made on a super tight schedule and it’s a miracle that it looked as good as it did.
 -	Seshimo and Yoshihara have learnt from the disastrous schedules of their previous productions, and are giving their team more time to deliver a better product.
@@ -53,7 +50,7 @@ So to guess when upcoming anime will release, taking into account that the Reze 
 
 Keep in mind though this is simply an educated guess as we can never know what truly goes on behind the scenes without insider knowledge.
 
-Do you think you can predict when your favourite show will get a new season? Perhaps you can try predicting when Bocchi the Rock season 2 will air. The AniP for Bocchi the Rock at studio Cloverworks is Shouta Umehara.
+Do you think you can now predict when your favourite show will get a new season? Perhaps you can try predicting when *Bocchi the Rock* season 2 will air. The AniP for *Bocchi the Rock* at studio Cloverworks is Shouta Umehara.
 
 <div style={{marginBottom: '-10px', marginTop: '-10px'}}>
   <img src="/images/blog/anime-insight-feb25/anip4.webp" className="rounded-xl" />
