--- a/content/blog/anime-industry-insight-feb25.mdx
+++ b/content/blog/anime-industry-insight-feb25.mdx
@@ -1,14 +1,10 @@
 ---
-title: Anime Industry Insight Feb'25
+title: Predict the release date of your favourite anime!
 description: "Learn about animation producers and production lines in anime studios"
 date: 2025-02-25
-tags: ["anime"]
+tags: ["anime","anime industry"]
 published: true
 ---
-
-<div align="center" style={{marginBottom: '-10px', marginTop: '0px'}}>
-    <h1>**Predict the release date of your favourite anime!**</h1>
-</div>
 
 How can you, yes YOU predict when an anime will release? Well to find out when an anime will release, you have to understand how anime studios work. Anime studios occupy a major space in the popular imagination of the anime fandom. However, the workings of these studios are often misunderstood. It is common sentiment to think that the entire staff of a studio works on an anime, and that multiple anime being made in the studio will lead to less quality because the staff or ‘budget’ gets divided. In reality different anime have their own production teams and separate budgets which are allocated by a Production committee (not the studio!)
  
@@ -56,5 +52,7 @@ Do you think you can now predict when your favourite show will release? Perhaps 
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
   <img src="/images/blog/anime-insight-feb25/anip4.webp" className="rounded-xl" />
 </div>
+
+<i>This article is part of a new series on animation and the anime industry</i>
 
 **Credits:** Ajit, Tarun
