Complete Category I: Character Awards

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -109,11 +109,9 @@ published: true
 
 --- 
 
-# Categories
+# Category I: Character Awards
 
-## Category I: Character Awards
-
-### Best Main Character
+## Best Main Character
 
 **Nominations**
 
@@ -144,7 +142,7 @@ published: true
 
 ---
 
-### Best Supporting Character
+## Best Supporting Character
 
 **Nominations**
 
@@ -169,6 +167,162 @@ published: true
 
 ---
 
+## Best Antagonist
 
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li><a href="https://myanimelist.net/character/144867/Regulus_Corneas" target="_blank" rel="noopener noreferrer">Greed</a>, Re:Zero S3</li>
+    <li><a href="https://myanimelist.net/character/151156/Muzan_Kibutsuji" target="_blank" rel="noopener noreferrer">Muzan Kibutsuji</a>, Demon Slayer S4</li>
+    <li><a href="https://myanimelist.net/character/209986/Nowak" target="_blank" rel="noopener noreferrer">Nowak</a>, Orb: On the Movements of the Earth</li>
+    <li><a href="https://myanimelist.net/character/170104/Thistle" target="_blank" rel="noopener noreferrer">Thistle</a>, Delicious in Dungeon</li>
+    <li><a href="https://myanimelist.net/character/197441/Oushi_Ashioki" target="_blank" rel="noopener noreferrer">Oushi Ashioki</a>, A Sign of Affection</li>
+    <li><a href="https://myanimelist.net/character/68537/Yhwach" target="_blank" rel="noopener noreferrer">Yhwach</a>, Bleach: TYBW Part 3</li>
+</ul>
+
+**Winners**
+
+- **People's Choice:** Muzan Kibutsuji, Demon Slayer S4
+- **Jury Choice:** Oushi Ashioki, A Sign of Affection
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img src="/images/blog/bacademy-awards-2025/best-antagonist-peoples-choice.webp" />
+    <img src="/images/blog/bacademy-awards-2025/best-antagonist-jury-choice.webp" />
+</div>
+
+---
+
+## Best Cast
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li>Delicious in Dungeon [<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Demon Slayer S4 [<a href="https://myanimelist.net/anime/55701/Kimetsu_no_Yaiba__Hashira_Geiko-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166240/Kimetsu-no-Yaiba-Hashira-Geikohen" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Girls Band Cry [<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Too Many Losing Heroines [<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Monogatari: Off & Monster Season [<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Orb: On the Movements of the Earth [<a href="https://myanimelist.net/anime/52215/Chi_Chikyuu_no_Undou_ni_Tsuite" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151514/Chi-Chikyuu-no-Undou-ni-Tsuite/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+</ul>
+
+**Winners**
+
+- **People's Choice:** Demon Slayer S4
+- **Jury Choice:** Orb: On the Movements of the Earth
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img src="/images/blog/bacademy-awards-2025/best-cast-peoples-choice.webp" />
+    <img src="/images/blog/bacademy-awards-2025/best-cast-jury-choice.webp" />
+</div>
+
+---
+
+## Best "Must Protect" Character
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li><a href="https://myanimelist.net/character/199997/Kyoumoto" target="_blank" rel="noopener noreferrer">Kyomoto</a>, Look Back</li>
+    <li><a href="https://myanimelist.net/character/257441/Girl" target="_blank" rel="noopener noreferrer">Unnamed Girl</a>, One Piece Fan Letter</li>
+    <li><a href="https://myanimelist.net/character/64769/Shouyou_Hinata" target="_blank" rel="noopener noreferrer">Shoyo Hinata</a>, Haikyuu: The Dumpster Battle</li>
+    <li><a href="https://myanimelist.net/character/213638/Chika_Komari" target="_blank" rel="noopener noreferrer">Chika Komari</a>, Too Many Losing Heroines</li>
+    <li><a href="https://myanimelist.net/character/251028/Marika_Shiraishi" target="_blank" rel="noopener noreferrer">Marika Shiraishi</a>, TsumaSho </li>
+    <li><a href="https://myanimelist.net/character/124753/Yunyun" target="_blank" rel="noopener noreferrer">Yunyun</a>, KonoSuba S3</li>
+</ul>
+
+**Winners**
+
+- **People's Choice:** Shoyo Hinata, Haikyuu: The Dumpster Battle
+- **Jury Choice:** Kyomoto, Look Back
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img src="/images/blog/bacademy-awards-2025/best-must-protect-character-peoples-choice.webp" />
+    <img src="/images/blog/bacademy-awards-2025/best-must-protect-character-jury-choice.webp" />
+</div>
+
+---
+
+## Best Boy
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li><a href="https://myanimelist.net/character/220214/Asagi" target="_blank" rel="noopener noreferrer">Asagi</a>, How I Attended an All-Guys Mixer</li>
+    <li><a href="https://myanimelist.net/character/668/Ranma_Saotome" target="_blank" rel="noopener noreferrer">Ranma Saotome</a>, Ranma ½</li>
+    <li><a href="https://myanimelist.net/character/194888/Haruka_Sakura" target="_blank" rel="noopener noreferrer">Haruka Sakura</a>, Wind Breaker</li>
+    <li><a href="https://myanimelist.net/character/196899/Ken_Takakura" target="_blank" rel="noopener noreferrer">Ken “Okarun” Takakura</a>, Dandadan</li>
+    <li><a href="https://myanimelist.net/character/192452/Tokiyuki_Houjou" target="_blank" rel="noopener noreferrer">Tokiyuki Houjou</a>, The Elusive Samurai</li>
+    <li><a href="https://myanimelist.net/character/195788/Taiki_Inomata" target="_blank" rel="noopener noreferrer">Taiki Inomata</a>, Blue Box</li>
+</ul>
+
+**Winners**
+
+- **People's Choice:** Okarun, Dandadan
+- **Jury Choice:** Haruka Sakura, Wind Breaker
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img src="/images/blog/bacademy-awards-2025/best-boy-peoples-choice.webp" />
+    <img src="/images/blog/bacademy-awards-2025/best-boy-jury-choice.webp" />
+</div>
+
+---
+
+## Best Girl
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li><a href="https://myanimelist.net/character/230307/Rupa" target="_blank" rel="noopener noreferrer">Rupa</a>, Girls Band Cry</li>
+    <li><a href="https://myanimelist.net/character/668/Ranma_Saotome" target="_blank" rel="noopener noreferrer">Ranma Saotome</a>, Ranma ½</li>
+    <li><a href="https://myanimelist.net/character/134263/Marcille_Donato" target="_blank" rel="noopener noreferrer">Marcille Donato</a>, Delicious in Dungeon</li>
+    <li><a href="https://myanimelist.net/character/213637/Anna_Yanami" target="_blank" rel="noopener noreferrer">Anna Yanami</a>, Too Many Losing Heroines</li>
+    <li><a href="https://myanimelist.net/character/7373/Holo" target="_blank" rel="noopener noreferrer">Holo</a>, Spice & Wolf (2024)</li>
+    <li><a href="https://myanimelist.net/character/195787/Chinatsu_Kano" target="_blank" rel="noopener noreferrer">Kano Chinatsu</a>, Blue Box</li>
+</ul>
+
+**Winners**
+
+- **People's Choice:** Anna Yanami, Too Many Losing Heroines
+- **Jury Choice:** Ranma Saotome, Ranma ½
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img src="/images/blog/bacademy-awards-2025/best-girl-peoples-choice.webp" />
+    <img src="/images/blog/bacademy-awards-2025/best-girl-jury-choice.webp" />
+</div>
+
+---
+
+## Best Couple
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li><a href="https://myanimelist.net/character/169654/Eiji_Kitahama" target="_blank" rel="noopener noreferrer">Eiji</a> and <a href="https://myanimelist.net/character/171556/Rin_Nanakura" target="_blank" rel="noopener noreferrer">Rin</a>, Pseudo Harem</li>
+    
+    <li><a href="https://myanimelist.net/character/669/Akane_Tendou" target="_blank" rel="noopener noreferrer">Akane</a> and <a href="https://myanimelist.net/character/668/Ranma_Saotome" target="_blank" rel="noopener noreferrer">Ranma</a>, Ranma ½ </li>
+
+    <li><a href="https://myanimelist.net/character/199287/Ayumu_Fujino" target="_blank" rel="noopener noreferrer">Fujino</a> and <a href="https://myanimelist.net/character/199997/Kyoumoto" target="_blank" rel="noopener noreferrer">Kyomoto</a>, Look Back</li>
+
+    <li><a href="https://myanimelist.net/character/196898/Momo_Ayase" target="_blank" rel="noopener noreferrer">Momo</a> and <a href="https://myanimelist.net/character/196899/Ken_Takakura" target="_blank" rel="noopener noreferrer">Okarun</a>, Dandadan</li>
+
+    <li><a href="https://myanimelist.net/character/7373/Holo" target="_blank" rel="noopener noreferrer">Holo</a> and <a href="https://myanimelist.net/character/7374/Kraft_Lawrence" target="_blank" rel="noopener noreferrer">Lawrence</a>, Spice & Wolf (2024)</li>
+
+    <li><a href="https://myanimelist.net/character/190636/Itsuomi_Nagi" target="_blank" rel="noopener noreferrer">Itsuomi</a> and <a href="https://myanimelist.net/character/190637/Yuki_Itose" target="_blank" rel="noopener noreferrer">Yuki</a>, A Sign of Affection</li>
+</ul>
+
+**Winners**
+
+- **People's Choice:** Momo and Okarun, Dandadan
+- **Jury Choice:** Akane and Ranma, Ranma ½
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img src="/images/blog/bacademy-awards-2025/best-couple-peoples-choice.webp" />
+    <img src="/images/blog/bacademy-awards-2025/best-couple-jury-choice.webp" />
+</div>
 
 <hr className="my-0 mt-2 mb-4" />
