Reduce spacing between images and categories

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -136,11 +136,11 @@ published: true
 - **Jury Choice:** Laios Touden, Delicious in Dungeon
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
-    <img src="/images/blog/bacademy-awards-2025/best-main-character-peoples-choice.webp" />
-    <img src="/images/blog/bacademy-awards-2025/best-main-character-jury-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-main-character-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-main-character-jury-choice.webp" />
 </div>
 
----
+<hr className="my-4" />
 
 ## Best Supporting Character
 
@@ -161,11 +161,11 @@ published: true
 - **Jury Choice:** Sister Hiyoko, The Colors Within
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
-    <img src="/images/blog/bacademy-awards-2025/best-supporting-character-peoples-choice.webp" />
-    <img src="/images/blog/bacademy-awards-2025/best-supporting-character-jury-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-supporting-character-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-supporting-character-jury-choice.webp" />
 </div>
 
----
+<hr className="my-4" />
 
 ## Best Antagonist
 
@@ -186,11 +186,11 @@ published: true
 - **Jury Choice:** Oushi Ashioki, A Sign of Affection
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
-    <img src="/images/blog/bacademy-awards-2025/best-antagonist-peoples-choice.webp" />
-    <img src="/images/blog/bacademy-awards-2025/best-antagonist-jury-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-antagonist-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-antagonist-jury-choice.webp" />
 </div>
 
----
+<hr className="my-4" />
 
 ## Best Cast
 
@@ -216,11 +216,11 @@ published: true
 - **Jury Choice:** Orb: On the Movements of the Earth
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
-    <img src="/images/blog/bacademy-awards-2025/best-cast-peoples-choice.webp" />
-    <img src="/images/blog/bacademy-awards-2025/best-cast-jury-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-cast-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-cast-jury-choice.webp" />
 </div>
 
----
+<hr className="my-4" />
 
 ## Best "Must Protect" Character
 
@@ -241,11 +241,11 @@ published: true
 - **Jury Choice:** Kyomoto, Look Back
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
-    <img src="/images/blog/bacademy-awards-2025/best-must-protect-character-peoples-choice.webp" />
-    <img src="/images/blog/bacademy-awards-2025/best-must-protect-character-jury-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-must-protect-character-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-must-protect-character-jury-choice.webp" />
 </div>
 
----
+<hr className="my-4" />
 
 ## Best Boy
 
@@ -266,11 +266,11 @@ published: true
 - **Jury Choice:** Haruka Sakura, Wind Breaker
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
-    <img src="/images/blog/bacademy-awards-2025/best-boy-peoples-choice.webp" />
-    <img src="/images/blog/bacademy-awards-2025/best-boy-jury-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-boy-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-boy-jury-choice.webp" />
 </div>
 
----
+<hr className="my-4" />
 
 ## Best Girl
 
@@ -291,11 +291,11 @@ published: true
 - **Jury Choice:** Ranma Saotome, Ranma ½
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
-    <img src="/images/blog/bacademy-awards-2025/best-girl-peoples-choice.webp" />
-    <img src="/images/blog/bacademy-awards-2025/best-girl-jury-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-girl-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-girl-jury-choice.webp" />
 </div>
 
----
+<hr className="my-4" />
 
 ## Best Couple
 
@@ -321,8 +321,8 @@ published: true
 - **Jury Choice:** Akane and Ranma, Ranma ½
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
-    <img src="/images/blog/bacademy-awards-2025/best-couple-peoples-choice.webp" />
-    <img src="/images/blog/bacademy-awards-2025/best-couple-jury-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-couple-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-couple-jury-choice.webp" />
 </div>
 
 <hr className="my-0 mt-2 mb-4" />
