Modify categories grid to be single column on mobile, and other line spacing

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -20,7 +20,7 @@ published: true
 
 **Categories**
 
-<div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '10px', marginTop: '-20px', marginBottom: '10px', alignItems: 'start' }}>
+<div className="grid grid-cols-1 md:grid-cols-2 my-0 place-items-start -mt-5 -mb-3">
   <div>
     [Category I: Character Awards](#category-i-character-awards)
     - [Best Main Character](#best-main-character)
@@ -69,7 +69,7 @@ published: true
 
 </div>
 
----
+<hr className="my-4" />
 
 # BACademy Awards 2025
 
@@ -107,7 +107,7 @@ published: true
 - **Country of Origin** \
   Anime (series and films) must be Japanese productions animated by Japanese studios; source material need not be Japanese. Manga must be published in a Japanese manga magazine.
 
---- 
+<hr className="my-4" />
 
 # Category I: Character Awards
 
