Complete till Best Action or Adventure

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -325,4 +325,102 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-couple-jury-choice.webp" />
 </div>
 
+<hr className="my-4" />
+
+# Category II: Genre Awards
+
+## Best Mystery, Thriller, or Horror
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li>Black Butler: Public School Arc [<a href="https://myanimelist.net/anime/55855/Kuroshitsuji__Kishuku_Gakkou-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166715/Kuroshitsuji-Kishuku-Gakkouhen/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Go! Go! Loser Ranger [<a href="https://myanimelist.net/anime/53770/Sentai_Daishikkaku" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/158417/Sentai-Daishikkaku/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Monogatari: Off & Monster Season [<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Orb: On the Movements of the Earth [<a href="https://myanimelist.net/anime/52215/Chi_Chikyuu_no_Undou_ni_Tsuite" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151514/Chi-Chikyuu-no-Undou-ni-Tsuite/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Re:Zero S3 [<a href="https://myanimelist.net/anime/54857/Re_Zero_kara_Hajimeru_Isekai_Seikatsu_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163134/ReZero-kara-Hajimeru-Isekai-Seikatsu-3rd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Shoshimin: How to Become Ordinary [<a href="https://myanimelist.net/anime/57810/Shoushimin_Series" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173295/Shoushimin-Series/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    
+</ul>
+
+**Winners**
+
+- **People's Choice:** Re:Zero S3
+- **Jury Choice:** Orb: On the Movements of the Earth
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-mystery-thriller-or-horror-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-mystery-thriller-or-horror-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Slice-of-Life
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li>Mr Villain’s Day Off [<a href="https://myanimelist.net/anime/54617/Kyuujitsu_no_Warumono-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162002/Kyuujitsu-no-Warumonosan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Puniru is a Kawaii Slime [<a href="https://myanimelist.net/anime/57517/Puniru_wa_Kawaii_Slime" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171400/Puniru-wa-Kawaii-Slime/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Yuru Camp S3 [<a href="https://myanimelist.net/anime/53410/Yuru_Camp△_Season_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155908/Yuru-Camp-SEASON-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Alya Sometimes Hides Her Feelings in Russian [<a href="https://myanimelist.net/anime/54744/Tokidoki_Bosotto_Russia-go_de_Dereru_Tonari_no_Alya-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162804/Tokidoki-Bosotto-Russiago-de-Dereru-Tonari-no-Alyasan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Natsume's Book of Friends S7 [<a href="https://myanimelist.net/anime/55823/Natsume_Yuujinchou_Shichi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166611/Natsume-Yuujinchou-Shichi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Negative Positive Angler [<a href="https://myanimelist.net/anime/59425/NegaPosi_Angler" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/179919/NegaPosi-Angler/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    
+</ul>
+
+**Winners**
+
+- **People's Choice:** Alya Sometimes Hides Her Feelings in Russian
+- **Jury Choice:** Yuru Camp S3
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-slice-of-life-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-slice-of-life-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Action or Adventure
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+    <li>Dandadan [<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Wind Breaker [<a href="https://myanimelist.net/anime/54900/Wind_Breaker" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163270/WIND-BREAKER/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>The Elusive Samurai [<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Kaiju No. 8 [<a href="https://myanimelist.net/anime/52588/Kaijuu_8-gou" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153288/Kaijuu-8gou/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+
+    <li>Solo Leveling [<a href="https://myanimelist.net/anime/52299/Ore_dake_Level_Up_na_Ken" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151807/Ore-dake-Level-Up-na-Ken/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    <li>Bleach: Thousand Year Blood War, Part 3 [<a href="https://myanimelist.net/anime/56784/Bleach__Sennen_Kessen-hen_-_Soukoku-tan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/169755/BLEACH-Sennen-Kessenhen--Soukokutan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    
+    
+</ul>
+
+**Winners**
+
+- **People's Choice:** Dandadan
+- **Jury Choice:** Wind Breaker
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-action-or-adventure-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-action-or-adventure-jury-choice.webp" />
+</div>
+
 <hr className="my-0 mt-2 mb-4" />
